k8s/20-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onboarding-app
  namespace: onboarding-portal
  labels:
    app: onboarding-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: onboarding-app
  template:
    metadata:
      labels:
        app: onboarding-app
    spec:
      containers:
        - name: onboarding-app
          image: employee-onboarding-portal:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 45
            periodSeconds: 20
          startupProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            failureThreshold: 30
            periodSeconds: 5
