k8s/21-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: onboarding-app
  namespace: onboarding-portal
spec:
  selector:
    app: onboarding-app
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
